Fix undreadable text in cloudslider input box in dark mode

--- a/src/components/CloudSlider/CloudSlider.css
+++ b/src/components/CloudSlider/CloudSlider.css
@@ -33,6 +33,7 @@
 
 .cloudSlider .MuiInput-root {
   width: 42px;
+  color: var(--side-panel-slider-input-color);
 }
 .cloudSlider .MuiInput-underline:before {
   border-bottom-color: var(--side-panel-slider-input-underline);
